--- a/Data science project.html
+++ b/Data science project.html
@@ -103,9 +103,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </header>
 
 
-<section id="my-project" class="level2">
-<h2 class="anchored" data-anchor-id="my-project">My Project</h2>
-<p>This project analyses human capital by studying the cognitive abilities of individuals and the influence of the same on the labour market. The major data sources used throughout this project are the National Longitudinal Survey of Youth 1979, known through this paper by the acronym NLSY79, and the data set that is used to match the AFQT (Armed Forces Qualification Test) scores.</p>
+<section id="project-summary" class="level1">
+<h1>Project Summary</h1>
+<p>The data, for this project, is drawn from two surveys: the National Longitudinal Survey of Youth 1979 (NLSY79) and that of the NLSY97, which has data on both different cohorts—though time-variant. The data has an array of information given, but the key data, in more ways than one, is the score data from the Armed Forces Qualification Test (AFQT).</p>
+<p>This project will compare AFQT scores at age 16 between these two cohorts to capture changes over time in cognitive abilities. It requires datasets having the participant weights to guarantee the representativeness of the data of the population.</p>
+<p>One major challenge in the project is that some of the NLSY79 data cannot be directly used in its format. This needs conversion of some files formatted in DCT to be converted as a priority to text files and finally to Excel files to be readable in R for the analysis to be conducted and graph replicated as it appears in Deming’s paper.</p>
+<p>The analysis file will be complete in the end, meaning that it will permit accurate comparisons and insights of how cognitive abilities and associated economic returns have developed across cohorts. The project thus attempts to make valuable contributions by overcoming the presented challenges of data conversion in human capital research.</p>
 </section>
 <section id="challenges-faced" class="level1">
 <h1>Challenges faced</h1>
